force-app/main/default/objects/Application_Section_Tracking__c/Application_Section_Tracking__c.object-meta.xml
<CustomObject>
    <label>Application Section Tracking</label>
    <nameField>
        <displayFormat>AST-{0000}</displayFormat>
        <label>AST Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Section Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>