force-app/main/default/objects/Application_Section_Tracking__c/fields/Application_Section__c.field-meta.xml
<CustomField>
    <fullName>Application_Section__c</fullName>
    <label>Application Section</label>
    <length>50</length>
    <type>Text</type>
</CustomField>