force-app/main/default/objects/Application_Section_Tracking__c/fields/Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Minutes__c</fullName>
    <formula>IF( ISBLANK(End_Date__c)  ,( NOW() - Start_Date__c)*24*60 , (End_Date__c - Start_Date__c)*24*60)</formula>
    <label>Duration In Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>