force-app/main/default/objects/Application_Section_Tracking__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Application Section Trackings</relationshipLabel>
    <relationshipName>ApplicationSectionTrackings</relationshipName>
    <type>Lookup</type>
</CustomField>