force-app/main/default/objects/Application_Section_Tracking__c/fields/Previous_Application_Section__c.field-meta.xml
<CustomField>
    <fullName>Previous_Application_Section__c</fullName>
    <label>Previous Application Section</label>
    <length>50</length>
    <type>Text</type>
</CustomField>